src/test/deca/context/invalid/added/method_not_exist.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A {
}

{
  A a = new A();
  a.test();
}
